--- a/angular/tpl/desktop/viewtodo.html
+++ b/angular/tpl/desktop/viewtodo.html
@@ -11,7 +11,7 @@
                         </ul>
                     </div>
                     <div class="topbar-right">
-                        <i class="fa fa-window-close-o secondary" ng-click="goback();"></i>
+                        <span class="close-icon secondary" ng-click="goback();">X</span>
                     </div>
                 </div>
             </div>
