close icon, friends top list space and rightsidebar height fixed

--- a/angular/tpl/desktop/projectdetails.html
+++ b/angular/tpl/desktop/projectdetails.html
@@ -18,7 +18,7 @@
                             <i class="fa fa-calendar"></i>
                             <span>{{projectData.deadline | dateToISO | date:'dd-MM-yyyy'}}</span>
                         </div>
-                        <span class="close-icon secondary" ng-click="goback()">X</span>
+                        <span class="close-icon secondary" ng-click="goback()"></span>
                     </div>
                 </div>
             </div>
