--- a/angular/tpl/desktop/userchat.html
+++ b/angular/tpl/desktop/userchat.html
@@ -35,7 +35,7 @@
                             <li ng-if="chatInfo.seconduser == user.id"><i class="fa fa-circle success"></i> <span>{{chatInfo.firstuserinfo.onlinestatus == 1 ? 'Online':'Offline'}}</span></li>
                             <li ng-if="chatInfo.firstuser == user.id"><i class="fa fa-circle success"></i> <span>{{chatInfo.seconduserinfo.onlinestatus == 1 ? 'Online':'Offline'}}</span></li>
                         </ul>
-                        <span class="close-icon secondary" ng-click="goback()">x</span>
+                        <span class="close-icon secondary" ng-click="goback()"></span>
                     </div>
                 </div>
             </div>
