--- a/angular/tpl/desktop/viewfeed.html
+++ b/angular/tpl/desktop/viewfeed.html
@@ -11,7 +11,7 @@
                         </ul>
                     </div>
                     <div class="topbar-right">
-                        <span class="close-icon secondary">X</span>
+                        <span class="close-icon secondary"></span>
                     </div>
                 </div>
             </div>
