--- a/angular/tpl/blocks/desktop/rightmenu.html
+++ b/angular/tpl/blocks/desktop/rightmenu.html
@@ -175,6 +175,10 @@
 <div class="right-sidebar" ng-if="stateurl == 'app.notification' || stateurl == 'app.chats' || stateurl == 'app.wishlist' || stateurl == 'app.projectlist' || stateurl == 'app.feeds' || stateurl == 'app.todos' || stateurl == 'app.viewtodo' || stateurl == 'app.viewfeed' || stateurl == 'app.howitworks' || stateurl == 'app.rewardsandbenefits'">
 
     <div class="right-wrapper">
+         <div class="right-title">
+            <button type="button" class="btn success-btn block-btn" ng-click="openRequestModal();">Post Request</button>
+        </div>
+
         <div class="right-no-project">
 
             <div class="empty-msg">
