--- a/angular/tpl/desktop/userchat.html
+++ b/angular/tpl/desktop/userchat.html
@@ -20,14 +20,14 @@
                     </div>
                     <div class="topbar-right">
                         <ul class="topbar-list" ng-if="chatInfo.seconduser == user.id">
-                            <li><i class="fa fa-binoculars"></i> Followers | {{chatInfo.firstuserinfo.followers}} </li>
-                            <li><i class="fa fa-user"></i> Following | {{chatInfo.firstuserinfo.following}} </li>
-                            <li><i class="fa fa-eye"></i> Deal made | {{chatInfo.firstuserinfo.noofdeals}} </li>
+                            <li><i class="fa fa-binoculars"></i> Followers {{chatInfo.firstuserinfo.followers}} </li>
+                            <li><i class="fa fa-user"></i> Following {{chatInfo.firstuserinfo.following}} </li>
+                            <li><i class="fa fa-eye"></i> Deal made {{chatInfo.firstuserinfo.noofdeals}} </li>
                         </ul>
                         <ul class="topbar-list" ng-if="chatInfo.firstuser == user.id">
-                            <li><i class="fa fa-binoculars"></i> Followers | {{chatInfo.seconduserinfo.followers}} </li>
-                            <li><i class="fa fa-user"></i> Following | {{chatInfo.seconduserinfo.following}} </li>
-                            <li><i class="fa fa-eye"></i> Deal made | {{chatInfo.seconduserinfo.noofdeals}} </li>
+                            <li><i class="fa fa-binoculars"></i> Followers {{chatInfo.seconduserinfo.followers}} </li>
+                            <li><i class="fa fa-user"></i> Following {{chatInfo.seconduserinfo.following}} </li>
+                            <li><i class="fa fa-eye"></i> Deal made {{chatInfo.seconduserinfo.noofdeals}} </li>
                         </ul>
                     </div>
                     <div class="topbar-right">
