updates and chnages

--- a/angular/tpl/desktop/viewitem.html
+++ b/angular/tpl/desktop/viewitem.html
@@ -13,9 +13,9 @@
             </div>
             <div class="topbar-right">
                 <ul class="topbar-list">
-                    <li><i class="fa fa-binoculars"></i> Followers | {{viewData.owner.followers}} </li>
-                    <li><i class="fa fa-user"></i> Following | {{viewData.owner.following}} </li>
-                    <li><i class="fa fa-eye"></i> Deals | {{viewData.owner.noofdeals}} </li>
+                    <li><i class="fa fa-binoculars"></i> Followers {{viewData.owner.followers}} </li>
+                    <li><i class="fa fa-user"></i> Following {{viewData.owner.following}} </li>
+                    <li><i class="fa fa-eye"></i> Deals {{viewData.owner.noofdeals}} </li>
                 </ul>
             </div>
             <div class="topbar-right">
