--- a/angular/tpl/desktop/feedchat.html
+++ b/angular/tpl/desktop/feedchat.html
@@ -74,7 +74,7 @@
                 </div>
             </div>
         </div>
-        <div class="row  mt-15">
+        <div class="row">
             <div class="col-lg-12 col-md-12">
                 <div class="chat-wrap">
                     <div class="message-head">
